services/20-core/webpage/20-deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: webpage-stage
  namespace: webpage
  labels:
    app.kubernetes.io/name: webpage
    app.kubernetes.io/instance: stage
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: webpage
      app.kubernetes.io/instance: stage
  template:
    metadata:
      labels:
        app.kubernetes.io/name: webpage
        app.kubernetes.io/instance: stage
    spec:
      containers:
        - name: webpage
          image: antonjohansson/anton-johansson.com:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 4000
              protocol: TCP
