services/20-core/webpage/20-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: webpage
  namespace: webpage
spec:
  ports:
    - name: http
      port: 80
