services/20-core/webpage/30-ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: webpage
  namespace: webpage
  labels:
    app.kubernetes.io/name: webpage
  annotations:
    kubernetes.io/ingress.class: external
    certmanager.k8s.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/permanent-redirect: https://github.com/anton-johansson
spec:
  rules:
    - host: anton-johansson.com
      http: &http
        paths:
          - path: /
            backend:
              serviceName: webpage
              servicePort: 80
    - host: anton-johansson.se
      http: *http
